[gd_scene load_steps=2 format=3 uid="uid://pt623vjaymv5"]

[ext_resource type="Script" uid="uid://dayvbdg23jint" path="res://scenes/combatUI/abilityInformationComponent/ability_information_ui.gd" id="1_ivdoa"]

[node name="AbilityInformationUI" type="Control"]
layout_mode = 3
anchor_right = 0.325
anchor_bottom = 0.378
offset_right = -0.400024
offset_bottom = 0.0559845
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ivdoa")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AbilityNameLabel" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Name"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LaunchPositionUI" type="RichTextLabel" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "1,2,3,4"
fit_content = true

[node name="TargetPositionUI" type="RichTextLabel" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "1,2,3,4"
fit_content = true

[node name="MultUI" type="RichTextLabel" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "x1.0"
fit_content = true

[node name="TargetingTypeUI" type="RichTextLabel" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Single_opp"
fit_content = true

[node name="AbilityDescriptionLabel" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean facilisis velit blandit, volutpat odio ut, scelerisque erat. Aliquam erat volutpat. Pellentesque ac semper mi"
fit_content = true
